feat: show model pricing in selection, and add cost estimate to Workspace